# human_stress_detection

./: .gitattributes  .gitignore  pyproject.toml
assets/: HRV_UpDown.drawio
conv_nets/drivers_tries/: NetUpDownCoder2.ipynb  NetUpDownCoder3.ipynb  check_steps.ipynb  test_2_conv_3_fc.ipynb  test_3_conv_3_fc.ipynb  test_6_conv_2_maxpool.ipynb  test_6_conv_2_maxpool_2.ipynb  test_8_conv.ipynb
conv_nets/drivers_tries/driver_related_nets/: test_6_conv_2_maxpool_2.ipynb
conv_nets/drivers_tries/others/: check_val.ipynb  driver_results.txt  output.txt  simple review of results.md  test_drivers_stress_recognition.ipynb
conv_nets/wesad_tries/: NetUpDownCoder3_3.ipynb  common_train.py  skip_subject.py  steps_NetUpDownCoder3.ipynb  steps_NetUpDownCoder3_3.ipynb  test.ipynb  test_6_conv_2_maxpool_2.ipynb  utils.py
conv_nets/wesad_tries/models/: __init__.py  net_up_down_coder3_15.py  net_up_down_coder3_30.py  net_up_down_coder3_45.py  net_up_down_coder3_60.py  net_up_down_coder3_ap_15.py  net_up_down_coder3_ap_30.py  net_up_down_coder3_ap_45.py  net_up_down_coder3_ap_60.py  net_up_down_coder3_mp_15.py  net_up_down_coder3_mp_30.py  net_up_down_coder3_mp_45.py  net_up_down_coder3_mp_60.py  test_net_up_down_coder3_mp_60.py
conv_nets/wesad_tries/models_v2/: __init__.py  get_reduce.py  (+1 more)
data/: .gitignore
data/WESAD/: see.ipynb  wesad_signal_and_rr_intervals.pkl
ds/: test_ubfc-phys-2_bvp.ipynb  try_savgol_filter.ipynb
ds/drivers/: datasets.py  drivers.py
ds/wesad/: datasets.py  datasets_users.py  extract_hrv.py  labels.py
models_dumps/wesad/: compute_metrics.ipynb
(+21 files in other folders)
